...
                                <rect key="frame" x="0.0" y="607" width="375" height="60"/>
                                <color key="backgroundColor" red="0.98431372549019602" green="0.32941176470588235" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="bmT-b8-Xp2"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <state key="normal" title="Book The Movie">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="2iT-1O-MfC" kind="show" identifier="book" id="VUt-DS-W7b"/>
                                </connections>
                            </button>
...
